<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tagliaferro.adriano.projetoposto.view.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginBottom="@dimen/margin_ten"
        android:background="@color/colorPrimary" />

    <TextView
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veiculos" />

    <FrameLayout
        android:id="@+id/frameListVeiculos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="1">

    </FrameLayout>

    <TextView
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abastecimentos" />

    <FrameLayout
        android:id="@+id/frameListAbastecimentos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="2">

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_mes_atual" />

        <TextView
            android:id="@+id/text_main_km_mes"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_mes_atual" />

        <TextView
            android:id="@+id/text_main_valor_mes"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="140.00" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_abastecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dimen_20"
        android:src="@drawable/ic_add"
        app:fabSize="auto" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
